<resources>
    <string name="app_name">Proj5-Dados</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d12">d12</string>
    <string name="d20">d20</string>
    <string name="d100">d100</string>
    <string name="dados">Dados</string>
    <string name="rolar">Rolar</string>
</resources>